<resources>
    <string name="app_name">SMile Cryptographic Extension</string>
    <string name="app_name_short">SMileCE</string>
    <string name="hello_world">Hello world!</string>
    <string name="error">Error</string>
    <string name="cancel">Cancel</string>
    <string name="retry">Retry</string>
    <string name="go">Go</string>
    <string name="export">Export</string>
    <string name="done">Done</string>
    <string name="info">Info</string>
    <string name="okay">Okay</string>
    <string name="delete">Delete</string>
    <string name="try_again">Please try again.</string>
    <string name="ask_try_again">Try it again?</string>
    <string name="action_settings">Settings</string>
    <string name="toolbar_default_title">SMile Cryptographic Extension</string>
    <string name="toolbar_title_list_of_certs">List of certificates</string>
    <string name="navigation_drawer_search">Search</string>
    <string name="navigation_drawer_info">Info</string>
    <string name="navigation_drawer_help">Help</string>
    <string name="navigation_drawer_settings">Settings</string>
    <string name="navigation_drawer_refresh">Refresh</string>
    <string name="navigation_drawer_import_certificate">Import S/MIME-Certificate</string>
    <string name="navigation_drawer_key_chain">Get Cert from KeyChain</string>
    <string name="navigation_decrypt_local_mail">Decrypt locally saved mail</string>
    <string name="navigation_import_other_certificate">Import public certificate</string>
    <string name="navigation_drawer_header_name">FAU is MAD!</string>
    <string name="navigation_drawer_header_email_address">fixmymail@i2.cs.fau.de</string>
    <string name="app_info">Created in "Mobile Application Development" 2015.\n
        Licensed under Apache 2.0 License.\n
        More information on <a href="https://mad.cs.fau.de/">https://mad.cs.fau.de/</a> \n
        Image credits: <a href="http://blog.spoongraphics.co.uk">http://blog.spoongraphics.co.uk</a>\n
        Material Design Icons: <a href="https://www.google.com/design/icons/">https://www.google.com/design/icons/</a>\n
        Included Project: <a href="https://github.com/konradrenner/kore-javamail">Kore javamail an javamail-android fork</a>
    </string>
    <string name="author">Author</string>
    <string name="license">License</string>
    <string name="other_projects">Other Projects</string>
    <string name="author_text">Created in project \"Mobile Application Delevopement\" at
    Friedrich-Alexander-University Erlangen-Nuremberg, 2015. \n\n
        · More information about MAD: \n\t<a href="https://mad.cs.fau.de/">https://mad.cs.fau.de/</a>\n
        · Sourcecode on Github: \n\t<a href="https://github.com/FAU-Inf2/SMileCE">https://github.com/FAU-Inf2/SMileCE</a></string>
    <string name="apache">Copyright 2015 SMile\n\n
        Licensed under the Apache License, Version 2.0 (the "License");
        you may not use this file except in compliance with the License.\n\n
        You may obtain a copy of the License at\n
        \n
        \t\t<a href="http://www.apache.org/licenses/LICENSE-2.0">http://www.apache.org/licenses/LICENSE-2.0</a>\n
        \n
        Unless required by applicable law or agreed to in writing, software
        distributed under the License is distributed on an "AS IS" BASIS,
        WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.\n\n
        See the License for the specific language governing permissions and
        limitations under the License.
    </string>
    <string name="other_projects_list">This application includes work from these projects: \n\n

        · Javamail-Android:\n
        \t License: GNU GPL v2 \n
        \t Link: <a href="https://code.google.com/p/javamail-android/">https://code.google.com/p/javamail-android/</a> \n
        · Material Design Icons:\n
        \t License: CC BY 4.0 \n
       \t Link: <a href="https://www.google.com/design/icons/">https://www.google.com/design/icons/</a>\n
        · Polygon Background:\n
        \t License: CC BY 2.0 \n
        \t Link: <a href="http://blog.spoongraphics.co.uk">http://blog.spoongraphics.co.uk</a>\n
        · Spongycastle:\n
        \t License: Adaption of MIT X11 License \n
        \t Link: <a href="https://rtyley.github.io/spongycastle/">https://rtyley.github.io/spongycastle/</a>\n
        · scmail:\n
        \t License: Adaption of MIT X11 License \n
        \t Link: <a href="http://mvnrepository.com/artifact/com.madgag/scmail-jdk15on/1.47.0.3">http://mvnrepository.com/artifact/com.madgag/scmail-jdk15on/1.47.0.3</a>\n
        · aFileChooser:\n
        \t License: Apache License 2.0\n
        \t Link: <a href="https://github.com/iPaulPro/aFileChooser">https://github.com/iPaulPro/aFileChooser</a>\n
        · joda-time-android:\n
        \t License: Apache License 2.0\n
        \t Link: <a href="https://github.com/dlew/joda-time-android">https://github.com/dlew/joda-time-android</a>\n
        · Android Swipe Layout:\n
        \t License: The MIT License (MIT)\n
        \t Link: <a href="https://github.com/daimajia/AndroidSwipeLayout">https://github.com/daimajia/AndroidSwipeLayout</a>\n
    </string>
    <string name="key_management">SMile key management</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="first_element">First element</string>
    <string name="second_element">Second element</string>
    <string name="third_element">Third element</string>
    <string name="fullmime">Full MimeMessage</string>
    <string name="textplain">text/plain</string>
    <string name="texthtml">text/html</string>
    <string name="containsNoSuchPart">This MimeMessage does not contain the selected part.</string>
    <string name="title_activity_info">InfoActivity</string>
    <string name="title_activity_help">HelpActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_import_certificate">Import certificate to SMile</string>
    <string name="title_activity_key_chain">KeyChainActivity</string>
    <string name="title_activity_decrypt_local_mail">DecryptLocalMailActivity</string>
    <string name="title_activity_search">Search</string>
    <string name="title_activity_encrypt_local_mail">Encrypt local mail</string>
    <string name="import_certificate_todo">…import certificate…</string>
    <string name="fab_select_import_certificate">Select a certificate to import</string>
    <string name="import_decrypted_file">Select an encrypted mail</string>
    <string name="no_file_manager">Please install a file manager.</string>
    <string name="import_certificate_show_path">Your selected file was:&#160;</string>
    <string name="import_certificate_successful">Importing your certificate was successful.</string>
    <string name="import_certificate_no_file">No file to import was selected.</string>
    <string name="certificate_already_imported">The selected certificate is already imported.</string>
    <string name="not_eml">The selected file was not an .eml-file.</string>
    <string name="decrypt_file_show_path">File to be decrypted:&#160;</string>
    <string name="title_select_certificate">Select your certificate</string>
    <string name="enter_passphrase">Please enter the passphrase to unlock:</string>
    <string name="enter_passphrase_wrong">The entered passphrase is wrong.</string>
    <string name="something_went_wrong">Sorry, something went wrong. Maybe wrong passphrase or invalid file?</string>
    <string name="no_certificate_for_recipients">No certificate was found for the recipient. Please import your certificate.</string>
    <string name="decryption_failed">Decrypting this message was unsuccessful.</string>
    <string name="no_recipients">MimeMessage did not contain valid recipients.</string>
    <string name="no_valid_mime_message">The selected file does not contain a valid MimeMessage.</string>
    <string name="no_valid_decrypted_mime_message">The selected file does not contain a valid decrypted MimeMessage.</string>
    <string name="internal_error">An internal error occurred. Sorry for that. Please check the logfile.</string>
    <string name="error_reading_certificate">An error occurred while extracting the certificate from the selected file.</string>
    <string name="unknown_filetype">Selected file has an unknown filetype.</string>
    <string name="smile_save_passphrases_certificate_alias">smile-save-passphrases-certificate</string>
    <string name="smime_certificates_folder">smime-certificates</string>
    <string name="save_encrypted_mime_message">Save encrypted MimeMessage</string>
    <string name="no_mime_message_saved">No MimeMessage was saved.</string>
    <string name="saved_mime_message">Saved MimeMessage as: &#160;</string>
    <string name="multiple_certificates">Multiple certificate found, which should be used to decrypt message?</string>
    <string name="email_label">Email:</string>
    <string name="valid_label">Valid until:</string>
    <string name="certificate_deleted">Certificate was deleted.</string>
    <string name="faq_author">Who is the author of SMileCE?</string>
    <string name="faq_license">Which license does SMileCE have?</string>
    <string name="faq_other_projects">Which other projects are used by this app?</string>
    <string name="faq_import_cert_q">How can I import my S/MIME-certificate?</string>
    <string name="faq_import_cert">First of all save your certificate somewhere on the phone. The
        certificate must be a file of type \"PKCS #12\" (ends with .p12 or .pfx). Then open this app and click
        on the Floating Action Button or navigate to
        \"Import S/MIME-Certificate\" in the sidebar. Use the opened file browser to select your
        certificate. Finally you have to enter your passphrase.</string>
    <string name="faq_passphrase_saved_q">Will my passphrase be stored? Is this safe?</string>
    <string name="faq_passphrase_saved">Yes, the app will save your passphrase, so you do not have to
        enter the passphrase each time you want something to be decrypted. Therefore a internal keypair is
        created and your passphrase is encrypted with this key. The encrypted passphrase will be stored
        in the internal storage of the application. Without being root no other app can even access the
        file with the encrypted passphrase and even with being root another app should not be able to
        get the private key to decrypt the passphrase because the keypair is stored in the AndroidKeyStore
        which should only be accessible by the app itself.</string>
    <string name="faq_import_other_cert_q">How can I import someone else\'s S/MIME-certificate?</string>
    <string name="faq_import_other_cert">Click
        on the Floating Action Button or navigate to
        \"Import S/MIME-Certificate\" in the sidebar. Use the opened file browser to select the
        certificate (.crt-file) which you want to import.\n
        It is also possible to import a certificate by clicking on the file in your file browser
    and selecting SMileCE in the list of \"Open with\".</string>
    <string name="name">Name: </string>
    <string name="debug_info">Debug Information</string>
    <string name="debug_summary">Enable debug logging.</string>
    <string name="sort_order_summary">Current certificate display order: %1$s</string>
    <string name="order">Order</string>
    <string name="sort_type_summary">Currently certificates are sorted by: %1$s</string>
    <string name="sort_type">Sort by</string>
    <string name="type_name">Name</string>
    <string name="build">Current build:&#160;</string>
    <string name="default_date">Tap to select a date.</string>
    <string name="passphrase">Passphrase:</string>
    <string name="passphrase_repeat">Repeat Passphrase:</string>
</resources>