<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/DrawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:elevation="7dp"
    tools:context="de.fau.cs.mad.smile_crypto.HelpActivity"
    >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar">
        </include>

        <ScrollView
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
            <TableLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/buttonlike_faq_import_cert"
                    android:layout_height="wrap_content"
                    android:layout_width="fill_parent"
                    style="@android:style/Widget.Button"
                    android:layout_marginEnd="5sp"
                    android:text="@string/faq_import_cert_q"
                    android:clickable="false"
                    />
                <TextView
                    android:id="@+id/text_faq_import_cert"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/faq_import_cert"
                    android:visibility="gone"
                    android:textSize="13sp"
                    />

                <TextView
                    android:id="@+id/buttonlike_faq_passphrase_saved"
                    android:layout_height="wrap_content"
                    android:layout_width="fill_parent"
                    style="@android:style/Widget.Button"
                    android:layout_marginEnd="5sp"
                    android:text="@string/faq_passphrase_saved_q"
                    android:clickable="false"
                    />
                <TextView
                    android:id="@+id/text_faq_passphrase_saved"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/faq_passphrase_saved"
                    android:visibility="gone"
                    android:textSize="13sp"
                    />

                <TextView
                    android:id="@+id/buttonlike_author"
                    android:layout_height="wrap_content"
                    android:layout_width="fill_parent"
                    style="@android:style/Widget.Button"
                    android:layout_marginEnd="5sp"
                    android:text="@string/faq_author"
                    android:clickable="false"
                />
                <TextView
                    android:id="@+id/text_author"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/author_text"
                    android:visibility="gone"
                    android:textSize="13sp"
                />

                <TextView
                    android:id="@+id/buttonlike_license"
                    android:layout_height="wrap_content"
                    android:layout_width="fill_parent"
                    style="@android:style/Widget.Button"
                    android:layout_marginEnd="5sp"
                    android:text="@string/faq_license"
                    android:clickable="false"
                />
                <TextView
                    android:id="@+id/text_license"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/apache"
                    android:visibility="gone"
                    android:textSize="13sp"
                />

                <TextView
                    android:id="@+id/buttonlike_other_projects"
                    android:layout_height="wrap_content"
                    android:layout_width="fill_parent"
                    style="@android:style/Widget.Button"
                    android:layout_marginEnd="5sp"
                    android:text="@string/faq_other_projects"
                    android:clickable="false"
                />
                <TextView
                    android:id="@+id/text_projects"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/other_projects_list"
                    android:visibility="gone"
                    android:textSize="13sp"
                />
            </TableLayout>
        </ScrollView>
    </LinearLayout>
</android.support.v4.widget.DrawerLayout>