<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/DrawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:elevation="7dp"
    tools:context="de.fau.cs.mad.smile.android.encryption.ui.activity.CertificateCreationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp">

            <TextView
                android:id="@+id/name_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:layout_marginTop="8dp"/>

            <ImageView
                android:id="@+id/clear_name"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignParentEnd="true"
                android:src="@drawable/ic_clear_black_24dp"
                android:layout_marginTop="8dp"/>

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/name_label"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:inputType="textPersonName"
                android:layout_marginStart="8dp"/>

            <TextView
                android:id="@+id/name_wrong"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/name"
                android:visibility="gone"
                android:layout_marginTop="8dp"/>

            <TextView
                android:id="@+id/email_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/name_wrong"
                android:text="@string/email_label"
                android:layout_marginTop="8dp"/>

            <ImageView
                android:id="@+id/clear_email"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignParentEnd="true"
                android:layout_below="@id/name_wrong"
                android:src="@drawable/ic_clear_black_24dp"
                android:layout_marginTop="8dp"/>

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/email_label"
                android:layout_below="@id/name_wrong"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:inputType="textEmailAddress"
                android:layout_marginStart="8dp"/>

            <TextView
                android:id="@+id/email_wrong"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/email"
                android:visibility="gone"
                android:layout_marginTop="8dp"/>

            <TextView
                android:id="@+id/valid_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/valid_label"
                android:layout_below="@id/email_wrong"
                android:layout_marginTop="8dp"/>

            <TextView
                android:id="@+id/valid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/email_wrong"
                android:layout_toEndOf="@id/valid_label"
                android:text="@string/default_date"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"/>

            <TextView
                android:id="@+id/valid_wrong"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/valid_label"
                android:visibility="gone"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"/>

            <TextView
                android:id="@+id/passphrase_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/passphrase"
                android:layout_below="@id/valid_wrong"
                android:layout_marginTop="8dp"/>

            <ImageView
                android:id="@+id/clear_passphrase"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignParentEnd="true"
                android:src="@drawable/ic_clear_black_24dp"
                android:layout_below="@id/valid_wrong"
                android:layout_marginTop="8dp"/>

            <EditText
                android:id="@+id/passphrase"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/passphrase_label"
                android:layout_below="@id/valid_wrong"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:inputType="textPassword"
                android:layout_marginStart="8dp"/>

            <TextView
                android:id="@+id/passphrase_repeat_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/passphrase"
                android:text="@string/passphrase_repeat"
                android:layout_marginTop="8dp"/>

            <ImageView
                android:id="@+id/clear_passphrase_repeat"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignParentEnd="true"
                android:layout_below="@id/passphrase"
                android:src="@drawable/ic_clear_black_24dp"
                android:layout_marginTop="8dp"/>

            <EditText
                android:id="@+id/passphrase_repeat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/passphrase_label"
                android:layout_below="@id/passphrase"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:inputType="textPassword"
                android:layout_marginStart="8dp"/>

            <TextView
                android:id="@+id/passphrase_wrong"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/passphrase_repeat"
                android:visibility="gone"
                android:layout_marginTop="8dp"/>

        </RelativeLayout>
    </LinearLayout>
</android.support.v4.widget.DrawerLayout>